syntax = "proto3";

package events.v1;

import "address/v1/address.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/tochemey/goakt/pb/events/v1;eventspb";

// Deadletter defines the deadletter event
message Deadletter {
  // Specifies the sender's address
  address.v1.Address sender = 1;
  // Specifies the actor address
  address.v1.Address receiver = 2;
  // Specifies the message to send to the actor
  // Any proto message is allowed to be sent
  google.protobuf.Any message = 3;
  // Specifies the message send time
  google.protobuf.Timestamp send_time = 4;
  // Specifies the reason why the deadletter
  string reason = 5;
}

// ActorStarted defines the actor started event
message ActorStarted {
  // Specifies the actor address
  address.v1.Address address = 1;
  // Specifies the started time
  google.protobuf.Timestamp started_at = 2;
}

// ActorStopped defines the actor stopped event
message ActorStopped {
  // Specifies the actor address
  address.v1.Address address = 1;
  // Specifies the stop time
  google.protobuf.Timestamp stopped_at = 2;
}

// ActorPassivated define the actor passivated event
message ActorPassivated {
  // Specifies the actor address
  address.v1.Address address = 1;
  // Specifies the passivation time
  google.protobuf.Timestamp passivated_at = 2;
}

// ActorChildCreated defines the child actor created event
message ActorChildCreated {
  // Specifies the actor address
  address.v1.Address address = 1;
  // Specifies the parent address
  address.v1.Address parent = 2;
  // Specifies the started time
  google.protobuf.Timestamp created_at = 3;
}

// ActorRestarted defines the actor restarted event
message ActorRestarted {
  // Specifies the actor address
  address.v1.Address address = 1;
  // Specifies the stop time
  google.protobuf.Timestamp restarted_at = 2;
}

// NodeJoined defines the node joined event
message NodeJoined {
  // Specifies the node address
  string address = 1;
  // Specifies the timestamp
  google.protobuf.Timestamp timestamp = 2;
}

// NodeLeft defines the node left event
message NodeLeft {
  // Specifies the node address
  string address = 1;
  // Specifies the timestamp
  google.protobuf.Timestamp timestamp = 2;
}
